package com.example.mcpdemo;

public enum HttpMethod {
    GET,
    POST,
    PUT,
    DELETE,
}
